# nix-template

./: Cargo.toml  README.md  flake.nix
macros/: Cargo.toml
macros/src/: lib.rs
nix-template/: Cargo.toml
nix-template/src/: main.rs  spinner.rs  store.rs  utils.rs
src/: main.rs  utils.rs
