[package]
name = "nix-template-utils"
version = "0.1.0"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
minijinja = { version = "0.23", default-features = false }
serde = "1.0"
serde_json = "1.0"
xshell = "0.2"
