[package]
name = "nix-template"
version = "0.1.0"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
minijinja = { version = "0.23", features = ["source"] }
serde = "1.0"
serde_json = "1.0"
xshell = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
indicatif = "0.17"
maplit = "1.0"
paste = "1.0"
tempfile = "3.3"
ignore = "0.4"
nix-template-macros = { path = "../macros" }
linkme = "0.3"
once_cell = "1.15"
eyre = "0.6"
color-eyre = "0.6"
console = "0.15"