[package]
name = "nix-template"
version = "0.1.1"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
console = "0.15"
eyre = "0.6"
ignore = "0.4"
indicatif = "0.17"
linkme = "0.3"
log = "0.4"
minijinja = { version = "0.23", features = ["source"] }
nix-template-macros = { path = "../macros" }
once_cell = "1.15"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
xshell = "0.2"

[dev-dependencies]
maplit = "1.0"
once_cell = "1.15"
tempfile = "3.3"
